--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,4 @@
-<!--Online Class Automation HTML file
-For electron engine
-By notyourdaniels 
-Please credit me if you want to use this source code
-2021 dnyworks (notyourdaniels) -->
+<!-- Notyourdaniels on github -->
 
 <!DOCTYPE html>
 <html>
@@ -32,6 +28,7 @@ Please credit me if you want to use this source code
 
   <footer>
     <button onclick="quitApp()">Quit</button>
+    <div id="credit">dnyworks / notyourdaniels</div>
   </footer>
   <script>
     //Required pkg
